--- a/src/index.css
+++ b/src/index.css
@@ -29,11 +29,11 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #ffffff;
 }
+
 
 h1 {
   font-size: 3.2em;
@@ -70,4 +70,9 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+nav a {
+  color: inherit;
+  text-decoration: none;
 }
